alignment bug fixed

--- a/style.css
+++ b/style.css
@@ -66,11 +66,12 @@ input{
     line-height: 30px;
     border-bottom: 1px solid #e4e4e4;
     cursor: pointer;
+    margin-bottom: 5px;
 }
 .parah .fa{
     color: #fff;
     padding: 5px;
-    margin: 3px 10px;
+    margin: 0px 10px;
     border-radius: 50%;
     aspect-ratio: 1;
 }
